--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 import Callout from 'nextra-theme-docs/callout'
 
-# WundArt Wiki
+# WundArt Wiki 🎉
 
 <Callout emoji="✅">
   **MDX** (the library), at its core, transforms MDX (the syntax) to JSX.
